# arlogi

./: .coverage  .gitignore  .markdownlint.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
C4-Documentation/: index.html
C4-Documentation/c4-code-docs-reference/: index.html
C4-Documentation/c4-code-docs-scripts/: index.html
C4-Documentation/c4-code-src-arlogi/: index.html
C4-Documentation/c4-code-subdir/: index.html
C4-Documentation/c4-code-tests/: index.html
C4-Documentation/c4-code-tests-example/: index.html
C4-Documentation/c4-component/: index.html
C4-Documentation/c4-component-core-logging/: index.html
C4-Documentation/c4-component-documentation/: index.html
C4-Documentation/c4-component-test-suite/: index.html
C4-Documentation/c4-container/: index.html
C4-Documentation/c4-context/: index.html
CALLER_ATTRIBUTION_EXAMPLES/: index.html
CONFIGURATION_GUIDE/: index.html
DEVELOPER_GUIDE/: index.html
USER_GUIDE/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  CALLER_ATTRIBUTION_EXAMPLES.md  CONFIGURATION_GUIDE.md  DEVELOPER_GUIDE.md  USER_GUIDE.md  index.md
docs/C4-Documentation/: README.md  c4-code-src-arlogi.md  c4-code-tests-example.md  c4-code-tests.md  c4-component-arlogi-logging-library.md  c4-component-core-logging.md  c4-component.md  c4-container.md  c4-context.md
logs/: dedicated_test.jsonl  root_test.jsonl
scripts/: build_pub.sh  gen_ref_pages.py
search/: search_index.json
src/arlogi/: __init__.py  (+5 more)
tests/: test_features.py
(+9 files in other folders)
